--- a/css/head.css
+++ b/css/head.css
@@ -1,5 +1,5 @@
 .head {
-    color: #FFFFFF;
+    color: var(--background-blanco);
     width: 100%;
     box-sizing: border-box;
     display: flex;
@@ -7,7 +7,7 @@
     align-items: center;
     padding-top: .75rem;
     padding-bottom: .75rem;
-    border-bottom: 1px solid #103D4A;
+    border-bottom: 1px solid var(--border-cabecera-mobile);
     position: absolute;
 }
 
@@ -20,9 +20,17 @@
 }
 
 .head__enlace {
-    font-size: 1.1rem;
     display: inline-block;
+    font-size: 1.1rem;
     margin-right: .7rem;
-    margin-bottom: 1.25rem;
+    margin-bottom: .7rem;
     margin-left: .7rem;
+}
+
+@media screen and (min-width: 1024px) {
+    .head {
+        flex-direction: row;
+        justify-content: space-between;
+        border: none;
+    }
 }
